add Header component

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
 }
 
+:root {
+  --color-dark-blue:#131921;
+  --color-border:#3b4149;
+  --color-orange: #febd69;
+  --color-blue: #232f3e;
+}
+
 body {
   font-family: 'Rubik', sans-serif;
 }
@@ -12,3 +19,76 @@ a {
   text-decoration: none;
   display: inline-block;
 }
+
+.form-control:focus {
+  box-shadow: none;
+  border-color: inherit;
+}
+
+.gap-10 {
+  gap: 10px;
+}
+
+.gap-15 {
+  gap: 15px;
+}
+
+.gap-30 {
+  gap: 30px;
+}
+
+/* Header Part Starts Here */
+.header-top-strip {
+  border-bottom: 1px solid var(--color-border);
+  background-color: var(--color-dark-blue);
+}
+
+.header-upper {
+  background-color: var(--color-dark-blue);
+}
+
+.input-group-text {
+  background-color: var(--color-orange);
+}
+
+.header-upper-links img{
+  width: 35px;
+  height: 35px;
+}
+
+.header-bottom {
+  background-color: var(--color-blue);
+}
+
+.menu-links a,
+.dropdown button {
+  color: white;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  letter-spacing: 0.3; /*QUESTION */
+  text-transform: uppercase;
+}
+
+.dropdown button:focus {
+  box-shadow: none;
+}
+
+.dropdown-menu {
+  background-color: var(--color-dark-blue);
+  width: 100%;
+  transform: translate(0px, 57px) !important;
+}
+
+.dropdown-item {
+  padding: 20px;
+  margin-bottom: 3px;
+  border-bottom: 1px solid var(--color-border);
+}
+
+.dropdown-item:hover {
+  background-color: transparent;
+  color: var(--color-orange) !important;
+}
+
+/* Header Part Ends Here */
