--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ a {
   background-color: var(--color-dark-blue);
 }
 
-.input-group-text {
+.header-upper .input-group-text {
   background-color: var(--color-orange);
 }
 
@@ -66,7 +66,7 @@ a {
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
-  letter-spacing: 0.3; /*QUESTION */
+  /* letter-spacing: 0.3; QUESTION */
   text-transform: uppercase;
 }
 
@@ -90,5 +90,22 @@ a {
   background-color: transparent;
   color: var(--color-orange) !important;
 }
-
 /* Header Part Ends Here */
+
+/* Footer Part Starts Here */
+footer {
+  background-color: var(--color-blue);
+}
+
+footer:not(:first-child) {
+  border-top: 1px solid var(--color-border);
+}
+
+footer .input-group-text {
+  background-color: var(--color-blue);
+  color: white;
+  padding: 8px 17px;
+  margin-left: -10px;
+}
+/* Footer Part Ends Here */
+
