--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,17 @@
   --color-border:#3b4149;
   --color-orange: #febd69;
   --color-blue: #232f3e;
+  --color-title: #bf4800;
+  --color-background: #f5f5f5;
+  --color-date: #777777;
+  --color-description: #1c1c1b;
+}
+
+.section-heading {
+  font-size: 26px;
+  line-height: 32px;
+  font-weight: 500;
+  margin-bottom: 30px;
 }
 
 body {
@@ -35,6 +46,24 @@ a {
 
 .gap-30 {
   gap: 30px;
+}
+
+.gap-45 {
+  gap: 45px;
+}
+
+.button {
+  background-color: var(--color-dark-blue);
+  color: white;
+  font-size: 14px;
+  padding: 13px 33px;
+  border-radius: 25px;
+}
+
+.button:hover {
+  background-color: var(--color-orange);
+  color: var(--color-dark-blue);
+  transition: 0.4s;
 }
 
 /* Header Part Starts Here */
@@ -66,7 +95,7 @@ a {
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
-  /* letter-spacing: 0.3; QUESTION */
+  letter-spacing: 0.3px;
   text-transform: uppercase;
 }
 
@@ -109,3 +138,192 @@ footer .input-group-text {
 }
 /* Footer Part Ends Here */
 
+/* Home Page Starts Here */
+/* home wrapper 1 */
+.main-banner-content {
+  top: 15%;
+  left: 5%;
+}
+
+.main-banner-content h4{
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-title);
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+}
+
+.main-banner-content h5{
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 54px;
+  text-transform: none;
+}
+
+.main-banner-content p {
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 0.4px;
+  color: var(--color-dark-blue);
+}
+
+.small-banner-content {
+  top: 25%;
+  left: 10%;
+}
+
+.small-banner-content h4{
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-title);
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+}
+
+.small-banner-content h5{
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 34px;
+  text-transform: none;
+}
+
+.small-banner-content p {
+  font-size: 14px;
+  line-height: 28px;
+  letter-spacing: 0.4px;
+  color: var(--color-dark-blue);
+}
+
+.small-banner {
+  width: 49%;
+}
+
+/* home wrapper 2 */
+.home-wrapper-2 {
+  background-color: var(--color-background);
+}
+
+/* home wrapper 3 */
+.categories {
+  background-color: white;
+  box-shadow: 0px 0px 10px #00001a53;
+  padding: 15px;
+  border-radius: 25px;
+}
+
+.categories-image {
+  height: 90px;
+}
+
+.categories-image-watch {
+  height: 80px;
+}
+
+/* featured-wrapper */
+/* PRODUCTCARD COMPONENT */
+.featured-card {
+  padding: 15px;
+  background-color: white;
+  box-shadow: 0px 0px 5px #00001a53;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.featured-image > img:last-child,
+.featured-image:hover > img:first-child
+{
+  display: none;
+}
+
+.featured-image:hover > img:last-child {
+  display: block;
+}
+
+.featured-details-brand {
+  font-size: 13px;
+  color: var(--color-title);
+}
+
+.featured-details-title {
+  font-size: 15px;
+  color: var(--color-description);
+}
+
+.featured-details-price {
+  font-size: 16px;
+  color: var(--color-description);
+}
+
+.featured-action-bar {
+  top: 15%;
+  right: -30px;
+}
+
+.featured-card:hover .featured-action-bar {
+  right: 25px;
+  transition: 0.7s;
+} 
+
+.featured-wishlist-icon {
+  top: 3%;
+  right: 27px;
+}
+
+/* speacial-wrapper */
+.special-card {
+  padding: 20px 10px;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 0px 0px 5px #00001a53;
+}
+
+/* marque-wrapper */
+.marque-wrapper-inner {
+  background-color: white;
+  box-shadow: 0px 0px 10px #00001a53;
+  padding: 15px;
+}
+
+/* blog-wrapper */
+/* BLOGCARD COMPONENT */
+.blog-card {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px #00001a53;
+}
+
+.blog-card img {
+  border-radius: 10px 10px 0 0;
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.blog-content {
+  padding: 15px;
+  border-radius: 0 0 10px 10px;
+}
+
+.blog-content-date {
+  font-size: 13px;
+  line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 0;
+  font-weight: 400;
+  color: var(--color-date);
+  padding: 0;
+}
+
+.blog-content-title {
+  font-size: 18px;
+  color: var(--color-dark-blue);
+}
+
+.blog-content-desc {
+  font-size: 13px;
+  line-height: 22px;
+  color: var(--color-date);
+}
+/* Home Page Ends Here */
